--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "Samsung >= 5"
   ],
   "dependencies": {
+    "axios": "^0.20.0",
     "dom7": "^2.1.5",
     "framework7": "^5.7.11",
     "framework7-icons": "^3.0.1",
@@ -30,6 +31,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-google-login": "^5.1.21",
+    "react-toastify": "^6.0.8",
+    "save": "^2.4.0",
     "template7": "^1.4.2"
   },
   "devDependencies": {
