--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-google-login": "^5.1.21",
+    "react-html-parser": "^2.0.2",
     "react-toastify": "^6.0.8",
     "save": "^2.4.0",
     "template7": "^1.4.2"
