--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "backpackers-trails",
+  "name": "trails",
   "private": true,
   "version": "1.0.0",
-  "description": "Backpackers Trails",
+  "description": "Trails",
   "repository": "",
   "license": "UNLICENSED",
   "scripts": {
@@ -10,6 +10,8 @@
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config ./build/webpack.config.js",
     "build-dev": "cross-env NODE_ENV=development node ./build/build.js",
     "build-prod": "cross-env NODE_ENV=production node ./build/build.js",
+    "build-dev-cordova": "cross-env TARGET=cordova cross-env NODE_ENV=development node ./build/build.js && cd cordova && cordova build",
+    "build-prod-cordova": "cross-env TARGET=cordova cross-env NODE_ENV=production node ./build/build.js && cd cordova && cordova build",
     "postinstall": "cpy ./node_modules/framework7-icons/fonts/*.* ./src/fonts/"
   },
   "browserslist": [
@@ -45,13 +47,13 @@
     "@babel/runtime": "^7.11.2",
     "babel-loader": "^8.1.0",
     "chalk": "^4.1.0",
-    "copy-webpack-plugin": "^6.0.3",
+    "copy-webpack-plugin": "^6.0.4",
     "cpy-cli": "^3.1.1",
     "cross-env": "^7.0.2",
-    "css-loader": "^4.2.1",
+    "css-loader": "^4.2.2",
     "file-loader": "^6.0.0",
-    "html-webpack-plugin": "^4.3.0",
-    "mini-css-extract-plugin": "^0.10.0",
+    "html-webpack-plugin": "^4.4.0",
+    "mini-css-extract-plugin": "^0.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "ora": "^5.0.0",
     "postcss-loader": "^3.0.0",
@@ -62,7 +64,6 @@
     "url-loader": "^4.1.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "workbox-webpack-plugin": "^5.1.3"
+    "webpack-dev-server": "^3.11.0"
   }
 }
