--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "dom7": "^2.1.5",
+    "firebase": "^7.19.1",
     "framework7": "^5.7.11",
     "framework7-icons": "^3.0.1",
     "framework7-react": "^5.7.11",
